# docs/swagger.json
@@ -183,10 +183,27 @@
                         "BearerAuth": []
                     }
                 ],
+                "description": "Retorna uma lista paginada dos perfis associados ao usuário autenticado. O usuário pode ter múltiplos perfis, e esta rota permite recuperar todos eles de forma organizada e eficiente.",
                 "tags": [
                     "profiles"
                 ],
                 "summary": "Listar os perfis do usuário logado",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Número da página",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Número de itens por página",
+                        "name": "per_page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -220,6 +237,7 @@
                         "BearerAuth": []
                     }
                 ],
+                "description": "Cria um novo perfil associado ao usuário autenticado. O usuário pode ter múltiplos perfis, e esta rota permite criar um novo perfil com as informações fornecidas no corpo da requisição.",
                 "tags": [
                     "profiles"
                 ],
